generating api-doc using swagger-autogen
